chore: add onShow & onHidden callback functions

--- a/docs/docs/PopupUI/ActionSheet.mdx
+++ b/docs/docs/PopupUI/ActionSheet.mdx
@@ -194,3 +194,19 @@ interface Styles {
   divider?: StyleProp<ViewStyle>;
 }
 ```
+
+### `onShow`
+
+callback function on global component show animation ended
+
+| Type     | Default   | Required |
+| -------- | --------- | -------- |
+| Function | undefined | NO       |
+
+### `onHiddien`
+
+callback function on global component hide animation ended
+
+| Type     | Default   | Required |
+| -------- | --------- | -------- |
+| Function | undefined | NO       |
