feat: add SimpleSnackbar

--- a/docs/docs/PopupUI/AlertPopup.mdx
+++ b/docs/docs/PopupUI/AlertPopup.mdx
@@ -129,7 +129,7 @@ flag to render options vertically or horizontally
 | ------- | ------- | -------- |
 | boolean | false   | NO       |
 
-### `animtion`
+### `fadeAnimationConfig`
 
 fade animation configuration. see Let's see how to [useFadeAnimationStyle](/docs/hooks/useFadeAnimation). hooks.
 
