--- a/docs/docs/PopupUI/AlertPopup.mdx
+++ b/docs/docs/PopupUI/AlertPopup.mdx
@@ -1,10 +1,6 @@
-import image from '../../static/gif/alert-popup-sample.gif';
+import image from '../../static/gif/alert-popup-example.gif';
 
 # AlertPopup
-
-AlertPopup is iOS Alert UI looking popup with multiple options.
-
-Popup hides on user's interaction pressing option.
 
 ## Overview
 
@@ -77,7 +73,7 @@ AlertPopup.show({
 });
 ```
 
-## UI Props
+## Props
 
 ### `message`
 
@@ -131,7 +127,7 @@ flag to render options vertically or horizontally
 
 ### `fadeAnimationConfig`
 
-fade animation configuration. see Let's see how to [useFadeAnimationStyle](/docs/hooks/useFadeAnimation). hooks.
+fade animation configuration. see [useFadeAnimationStyle](/docs/hooks/useFadeAnimationStyle).
 
 | Type                 | Default   | Required |
 | -------------------- | --------- | -------- |
