feat: add headerElement, footerElement to AlertPopup

--- a/docs/docs/PopupUI/AlertPopup.mdx
+++ b/docs/docs/PopupUI/AlertPopup.mdx
@@ -133,6 +133,22 @@ fade animation configuration. see [useFadeAnimationStyle](/docs/hooks/useFadeAni
 | -------------------- | --------- | -------- |
 | FadeAnimationConfigs | undefined | NO       |
 
+### `headerElement`
+
+header content to render above title
+
+| Type         | Default   | Required |
+| ------------ | --------- | -------- |
+| ReactElement | undefined | NO       |
+
+### `footerElement`
+
+footer content to render below message
+
+| Type         | Default   | Required |
+| ------------ | --------- | -------- |
+| ReactElement | undefined | NO       |
+
 ### `styles`
 
 style object to override default style
