fix: add styles > container at SimpleSnackbar UI

--- a/docs/docs/SnackbarUI/SimpleSnackbar.mdx
+++ b/docs/docs/SnackbarUI/SimpleSnackbar.mdx
@@ -211,6 +211,7 @@ interface Styles {
   style?: StyleProp<ViewStyle>;
   title?: StyleProp<TextStyle>;
   description?: StyleProp<TextStyle>;
+  container?: StyleProp<TextStyle>;
   titleContainer?: StyleProp<ViewStyle>;
 }
 ```
