--- a/docs/docs/UI/AlertPopupUI.mdx
+++ b/docs/docs/UI/AlertPopupUI.mdx
@@ -1,6 +1,6 @@
 import image from '../../static/gif/alert-popup-example.gif';
 
-# AlertPopup
+# AlertPopupUI
 
 ## Overview
 
@@ -15,15 +15,15 @@ import image from '../../static/gif/alert-popup-example.gif';
 Using Default
 
 ```tsx title="AlertPopup.tsx"
-import { AlertPopup, createPopup } from 'react-native-global-components';
-export default createPopup(AlertPopup);
+import { AlertPopupUI, createPopup } from 'react-native-global-components';
+export default createPopup(AlertPopupUI);
 ```
 
 or you can override default props
 
 ```tsx title="AlertPopup.tsx"
 import {
-  AlertPopup,
+  AlertPopupUI,
   AlertPopupProps,
   createPopup,
 } from 'react-native-global-components';
@@ -33,7 +33,7 @@ const styles: AlertPopupProps['styles'] = StyleSheet.create({
 });
 
 export default createPopup((props: AlertPopupProps) => (
-  <AlertPopup {...props} styles={styles} />
+  <AlertPopupUI {...props} styles={styles} />
 ));
 ```
 
