--- a/docs/docs/UI/SimpleSnackbarUI.mdx
+++ b/docs/docs/UI/SimpleSnackbarUI.mdx
@@ -1,6 +1,6 @@
 import image from '../../static/gif/simple-snackbar-example.gif';
 
-# SimpleSnackbar
+# SimpleSnackbarUI
 
 ## Overview
 
@@ -15,15 +15,18 @@ import image from '../../static/gif/simple-snackbar-example.gif';
 Using Default
 
 ```tsx title="SimpleSnackbar.tsx"
-import { SimpleSnackbar, createSnackbar } from 'react-native-global-components';
-export default createSnackbar(SimpleSnackbar);
+import {
+  SimpleSnackbarUI,
+  createSnackbar,
+} from 'react-native-global-components';
+export default createSnackbar(SimpleSnackbarUI);
 ```
 
 or you can override default props
 
 ```tsx title="SimpleSnackbar.tsx"
 import {
-  SimpleSnackbar,
+  SimpleSnackbarUI,
   SimpleSnackbarProps,
   createSnackbar,
 } from 'react-native-global-components';
@@ -33,7 +36,7 @@ const styles: SimpleSnackbarProps['styles'] = StyleSheet.create({
 });
 
 export default createSnackbar((props: SimpleSnackbarProps) => (
-  <SimpleSnackbar {...props} styles={styles} />
+  <SimpleSnackbarUI {...props} styles={styles} />
 ));
 ```
 
