chore: fix docs

--- a/docs/docs/API/createPopup.mdx
+++ b/docs/docs/API/createPopup.mdx
@@ -18,7 +18,7 @@ AlertPopup.show(props);
 
 First, implement your custom UI or you can use any PopupUIs we provide
 
-You might need core hooks for state management. see [useUpdateGlobalComponentState](/docs/hooks/useUpdateGlobalComponentState)
+You might need core hooks for state management. see [usePopupContext](/docs/hooks/usePopupContext)
 
 ```tsx title="MyPopup.tsx"
 import { createPopup } from 'react-native-global-components';
